# crosssi

./: .gitignore  .gitmodules  CMakeLists.txt  MainMenu.qml  Settings.qml  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
.github/workflows/: cmake.yml
